# tdfpy

./: .gitignore  CHANGES  CHANGLOG.md  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  test_ook0.py  test_spectra.py
.github/: copilot-instructions.md
.github/workflows/: pylint.yml  python-package.yml
src/tdfpy/: __init__.py  constants.py  noise.py  pandas_tdf.py  spectra.py  timsdata.py
tdfpy/: __init__.py  constants.py  pandas_tdf.py  timsdata.py
tests/: test_pandas_tdf.py  test_spectra.py  test_timsdata.py
